crates/graphite/tests/ui/schema_partial_recovery.stderr
error: expected `;`
  --> tests/ui/schema_partial_recovery.rs:21:23
   |
21 |         node Employee extra_token;
   |                       ^^^^^^^^^^^
